[package]
name = "zarr-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zarrs = "0.12.0"
inquire = "0.6.2"
serde_json = "1.0"
indexmap = "2.2.3"
mio = "0.8.11"
clap = {version = "4.5.1", features = ["derive"]}
